Minimal sample